<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Weather</string>
    <string name="settings_label">Settings</string>
    <string name="detail_label">Detail</string>
    <!--    used by Weather settings-->
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_location_default" translatable="false">Atlanta</string>
    <string name="pref_unit_key" translatable="false">unit</string>
    <string name="pref_unit_title">Unit</string>
    <string name="pref_unit_metric_value" translatable="false">metric</string>
    <string name="pref_unit_metric_title">Metric</string>
    <string name="pref_unit_imperial_value" translatable="false">imperial</string>
    <string name="pref_unit_imperial_title">Imperial</string>
    <string name="pref_auto_key" translatable="false">auto</string>
    <string name="pref_auto_title">Auto Refresh</string>
    <string name="pref_notification_key" translatable="false">notification</string>
    <string name="pref_notification_title">Notification</string>
    <string name="pref_auto_summary_on">update weather automatically</string>
    <string name="pref_auto_summary_off">update weather manually</string>
    <string name="pref_notification_summary_on">notification enabled</string>
    <string name="pref_notification_summary_off">notification disabled</string>

    <!-- Weather Conditions (From OpenWeatherMap) -->
    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower Sleet</string>
    <string name="condition_615">Rain and Snow</string>
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Shower Snow</string>
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Shower Snow</string>
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string>
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>
    <string name="condition_unknown">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>
    <string name="menu_settings_title">Settings</string>

<!--    WeatherDate-->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
<!-- WeatherNotification-->
    <string name="forecast">Forecast</string>

<!--    Main activity-->
    <string name="updated">Updated</string>

<!--    detail page-->

    <string name="detail_humidity_label">Humidity</string>
    <string name="detail_pressure_label">Pressure</string>
    <string name="detail_wind_speed_label">Wind Speed</string>
    <string name="detail_sunrise_label">Sunrise</string>
    <string name="detail_sunset_label">Sunset</string>
    <string name="detail_population_label">Population</string>


</resources>