<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".DetailActivity">

<androidx.constraintlayout.widget.ConstraintLayout
android:layout_width="match_parent"
android:layout_height="match_parent">

        <TextView
            android:id="@+id/detail_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="@id/guideline_vertical"
            app:layout_constraintRight_toLeftOf="@id/guideline_vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Today, June 11" />

        <ImageView
            android:id="@+id/detail_iv_weather_condition"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/art_clouds"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@+id/detail_tv_date" />

        <TextView
            android:id="@+id/detail_tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="@id/detail_iv_weather_condition"
            app:layout_constraintRight_toRightOf="@id/detail_iv_weather_condition"
            app:layout_constraintTop_toBottomOf="@id/detail_iv_weather_condition"
            tools:text="Cloudy" />

        <TextView
            android:id="@+id/detail_tv_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textColor="@android:color/black"
            android:textSize="90sp"
            app:layout_constraintLeft_toRightOf="@id/guideline_vertical"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_tv_date"
            tools:text="19" />

        <TextView
            android:id="@+id/detail_tv_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            app:layout_constraintLeft_toLeftOf="@id/detail_tv_high"
            app:layout_constraintRight_toRightOf="@id/detail_tv_high"
            app:layout_constraintTop_toBottomOf="@+id/detail_tv_high"
            tools:text="10" />

        <TextView
            android:id="@+id/detail_tv_humidity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_humidity_label"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal" />

        <TextView
            android:id="@+id/detail_tv_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_tv_humidity_label"
            tools:text="50%" />

        <TextView
            android:id="@+id/detail_tv_pressure_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_pressure_label"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="@+id/detail_tv_humidity"
            app:layout_constraintTop_toBottomOf="@id/detail_tv_humidity" />

        <TextView
            android:id="@+id/detail_tv_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="@+id/detail_tv_pressure_label"
            app:layout_constraintTop_toBottomOf="@id/detail_tv_pressure_label"
            tools:text="997 hPa" />

        <TextView
            android:id="@+id/detail_tv_wind_speed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_wind_speed_label"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="@id/detail_tv_pressure"
            app:layout_constraintTop_toBottomOf="@id/detail_tv_pressure" />

        <TextView
            android:id="@+id/detail_tv_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="@id/detail_tv_wind_speed_label"
            app:layout_constraintTop_toBottomOf="@id/detail_tv_wind_speed_label"
            tools:text="4 km/h" />

        <TextView
            android:id="@+id/detail_tv_sunrise_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_sunrise_label"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="@id/detail_tv_wind_speed"
            app:layout_constraintTop_toBottomOf="@id/detail_tv_wind_speed" />

        <TextView
            android:id="@+id/detail_tv_sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="@id/detail_tv_sunrise_label"
            app:layout_constraintTop_toBottomOf="@id/detail_tv_sunrise_label"
            tools:text="06:24" />

        <TextView
            android:id="@+id/detail_tv_sunset_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_sunset_label"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="@id/detail_tv_sunrise"
            app:layout_constraintTop_toBottomOf="@id/detail_tv_sunrise" />

        <TextView
            android:id="@+id/detail_tv_sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="@id/detail_tv_sunset_label"
            app:layout_constraintTop_toBottomOf="@id/detail_tv_sunset_label"
            tools:text="19:54" />
        <TextView
            android:id="@+id/detail_tv_population_label"
            android:text="@string/detail_population_label"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/detail_tv_sunset"
            app:layout_constraintTop_toBottomOf="@id/detail_tv_sunset"/>
        <TextView
            android:id="@+id/detail_tv_population"
            tools:text="50,000"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/detail_tv_population_label"
            app:layout_constraintTop_toBottomOf="@id/detail_tv_population_label"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="280dp" />
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
